--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "@turf/turf": "^6.3.0",
+    "camelcase": "^6.2.0",
     "mapbox-gl": "^2.1.1",
     "papaparse": "^5.3.0",
     "react": "^17.0.1",
